2003-06-05  Kevin Vandersloot

	* charpick.c: make the relief none on the add palettes button so it doesn't stick
	out. Add an "add paellte" menu item and popup the dialog if pressed to the menu.
	
	* charpick.h, properties: make the edit_palette function non static.

2003-06-01  Kevin Vandersloot

	* charpick.c: pack the buttons tighter on larger panels. Fixes bug #95438. Also
	make the applet expand for Fitt's law.

2003-05-30 Ray Strode  <halfline@hawaii.rr.com> 

	* charpick.c: (charpicker_applet_fill):  Check panel 
	orientation before calling build_table (Bug #113785).
	
2003-05-07  Dennis Cranston <dennis_cranston at yahoo com>

	* properties.c:  HIGify the action area of the various preference
	dialogs.
	
2003-04-25  Dennis Cranston <dennis_cranston at yahoo com>

	* properties.c:  More HIGifcation of the preferences, properties, 
	and add dialogs.

2003-04-06  Kevin Vandersloot <kfv101@psu.edu>

	* help/C/Makefile.am: get the figures correct

2003-04-03  Kevin Vandersloot <kfv101@psu.edu>

	* charpick.c: Connect to the clicked signal to fix the stuck button problem. Fix
	the problem with two tooltips showing up on the palettes button. Comment out
	the unused static gchar* variables.

2003-03-25  Kevin Vandersloot <kfv101@psu.edu>

	* charpick.c, properties.c: Unicodeify the applet. Fixes bugs #93682,
	#104324, #32769
	
	* properties.c, charpick.c: remove frame to save space. Bind to focus event for
	prefs dialog to prevent unnecessary updates

2003-03-07  Mark McLoughlin  <mark@skynet.ie>

	* charpick.c: (help_cb):
	* properties.c: (phelp_cb):  update for screen-exec changes.

2003-03-02  Takeshi AIHANA <aihana@gnome.gr.jp>

	* help/ja/*.xml, help/ja/*.omf, help/ja/figures/*.png, help/ja/Makefile.am:
	added new documents for GNOME 2.2 tranlated by
	KAMAGASAKO Masatoshi <emerald@gnome.gr.jp>.

2003-01-21  Arvind Samptur <arvind.samptur@wipro.com>
	* charpick.c (applet_destroy): destroy
	the preferences dialog as well.
