@@ -1,3 +1,8 @@
+2003-06-16  Kevin Vandersloot
+
+	* properties.c: add some accesibility stuff. Also set the sensitivity of the edit/remove buttons
+	according to the selection
+
 2003-06-05  Kevin Vandersloot
 
 	* charpick.c: make the relief none on the add palettes button so it doesn't stick
